styles.css
* {
    margin: 0;
    padding: 0;
}
html {
    scroll-behavior: smooth;

}
@font-face{
    src:url('Monotes-EaRqg.ttf');
    font-family: monotes;
}

body{
    font-family: monotes;
    background-image: linear-gradient(#FBB51E,#FE8417);
}


.navbar {
    height: 70px;
    display: flex;
    justify-content:center;
    align-items: center;
    background-color: #FDBD35;
    border-bottom: 5px solid black;
    border-top: 5px solid black;
}




.navbar a {
    text-decoration: none;
    font-size: 30px;
    color:#537518;
    box-shadow: inset 0 0 0 0 #537518;
    margin: 0 30px;
    padding: 0 .25rem;
    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
}

.navbar a:hover {
    box-shadow: inset 300px 0 0 0 #537518;
    color: white;
  }

  .sticky {
    position: fixed;
    top: 0;
    width: 100%;
  }


.hero {
    
    width: 100%;
    height: 500px;
    background-image: url(Images/Maveli_5.png);
    background-size: cover;

}

.about {
    
    display: flex;
    color:#537518;
    justify-content:center;
    align-items: flex-start;
    margin-bottom: 70px;
}

.about .mav-img1{

    width: 400px;
    height: auto;
    margin-right: 50px;
}

.about-text {
    width: 50%;
    font-size: 25px;
    background-color: #FBB51E;
    padding-left: 15px;
    padding-bottom: 46px;
    
}

.about-text h1 {
    font-size: 35px; 
    margin-bottom: 10px; 
    text-align: center;
}

#aboutme,#aboutonam{
    margin-top:100px
}

